# WindowsPE

./: .dockerignore  .gitignore  ENVIRONMENT.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_seed_meta.sql
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/application/: methodology.rs  mod.rs  node_detail.rs  repositories.rs  search.rs
backend/src/domain/: mod.rs  node.rs  phase.rs  reference.rs  snippet.rs
backend/src/infrastructure/: mod.rs  seed.rs
backend/src/infrastructure/sqlite/: mod.rs  node_repository.rs
backend/src/interfaces/: mod.rs  router.rs
backend/src/interfaces/dto/: envelope.rs  methodology.rs  mod.rs  node_detail.rs  search.rs
backend/src/interfaces/handlers/: health.rs  methodology.rs  mod.rs  nodes.rs  search.rs
content/: SCHEMA.md  methodology.json
content/phases/: 01-initial-enumeration.json  02-user-enumeration.json  03-token-privileges.json  04-automated-tools.json  05-service-misconfigurations.json  06-registry.json  07-stored-credentials.json  08-scheduled-tasks.json  09-startup-apps.json  10-path-dll-hijacking.json  11-uac-token-impersonation.json  12-kernel-exploits.json  13-defense-bypass.json  14-ad-bridge.json
content/schema/: methodology.schema.json
frontend/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  postcss.config.mjs
frontend/public/: sw.js
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/node/[id]/: page.tsx
frontend/src/components/layout/: CommandPalette.tsx  ExportButton.tsx  FavoritesButton.tsx  FavoritesPanel.tsx  GridToggle.tsx  HelpButton.tsx  Logo.tsx  MobileMenu.tsx  OutputAnalyzer.tsx  PlaybookBuilder.tsx  ProgressTracker.tsx  SearchTrigger.tsx  ServiceWorkerRegister.tsx  ShortcutsHelp.tsx  StudyMode.tsx  TargetContext.tsx  ToolButtons.tsx  TopBar.tsx  TriageWizard.tsx
frontend/src/components/panel/: AddToPlaybookButton.tsx  FavoriteButton.tsx  MarkdownBody.tsx  NodeDetailPanel.tsx  NoteEditor.tsx  ReferenceList.tsx  SeverityBadge.tsx  SnippetBlock.tsx
frontend/src/components/tree/: FilterBar.tsx  MethodologyCanvas.tsx  PhaseLegend.tsx  PhaseNode.tsx  TechniqueNode.tsx  icons.ts
frontend/src/components/ui/: sheet.tsx
frontend/src/features/methodology/: export.ts  hooks.ts  match.ts  resume.ts  store.ts  types.ts  use-filter-url-sync.ts  use-resume.ts
frontend/src/features/playbook/: export.ts  types.ts
frontend/src/features/snippets/: clipboard.ts  highlight.ts  substitute.ts
frontend/src/features/study/: deck.ts
frontend/src/lib/: api-client.ts  layout-engine.ts  mitre.ts  use-debounced.ts  use-mounted.ts  utils.ts
