[package]
name        = "windowspe-backend"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.78"
description  = "WindowsPE — Windows Privilege Escalation methodology API."
license      = "MIT OR Apache-2.0"
publish      = false

[[bin]]
name = "windowspe-backend"
path = "src/main.rs"

# ----------------------------------------------------------------
# Profile tuning
# ----------------------------------------------------------------
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[profile.dev]
debug = 1   # smaller / faster dev builds; full debug only when explicitly opted into

# ----------------------------------------------------------------
# Dependencies
# ----------------------------------------------------------------
[dependencies]
# Async runtime ---------------------------------------------------
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
    "net",
    "fs",
] }

# HTTP framework --------------------------------------------------
axum       = { version = "0.7", features = ["macros", "http2", "tracing"] }
tower           = { version = "0.5", features = ["util"] }
tower-http      = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "set-header",
    "request-id",
    "timeout",
] }
# Rate limiting — IP-based token bucket, wraps governor crate.
tower_governor  = { version = "0.4", features = ["axum"] }

# Database --------------------------------------------------------
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
    "time",
] }

# Serialization ---------------------------------------------------
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling --------------------------------------------------
thiserror = "1"
anyhow    = "1"

# Async trait abstraction (NodeRepository is dyn-compatible) ------
async-trait = "0.1"

# Zero-copy bytes for the methodology cache -----------------------
bytes = "1"

# Tracing / logging -----------------------------------------------
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Config ----------------------------------------------------------
figment = { version = "0.10", features = ["env", "toml"] }
dotenvy = "0.15"

# Cache -----------------------------------------------------------
moka = { version = "0.12", features = ["future"] }

# Time ------------------------------------------------------------
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# Hashing (content sha256 for idempotent reseeds) -----------------
sha2 = "0.10"

# Validation (request DTOs) ---------------------------------------
validator = { version = "0.18", features = ["derive"] }

# OpenAPI generation (schema derives only — `utoipa-swagger-ui` is added
# in Step B once handlers exist, so we can pin its version to the actual
# axum version we end up on without churn).
utoipa = { version = "5", features = ["axum_extras", "time"] }

# ----------------------------------------------------------------
# Dev dependencies
# ----------------------------------------------------------------
[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
